--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/scripts/seccion2/019-destructuring.js"></script>
+    <div id="app"></div>
+    <script src="/scripts/seccion2/026-promises-ajax.js"></script>
 </body>
 </html>
